# fastapi-farm-prac

./: .gitignore  README.md  auth_utils.py  database.py  main.py  pyproject.toml  requirements.txt  schemas.py
routers/: route_auth.py  route_todo.py
